@@ -9,7 +9,7 @@
 
 #import <tkobjc/global.h>
 #import <tclObjc.h>
-#import <Tk.h>
+#import <TkInterp.h>
 #import <collections/String.h>
 #import <tkobjc/ButtonPanel.h>
 #import <tkobjc/Button.h>
