@@ -12,7 +12,7 @@
 #include <stdlib.h>
 
 #import <tkobjc/global.h>
-#import <Tk.h>
+#import <TkInterp.h>
 #import <tkobjc/Histo.h>
 
 @implementation Histo
