@@ -7,7 +7,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #import <tkobjc/global.h>
-#import <Tk.h>
+#import <TkInterp.h>
 #import <tkobjc/InputWidget.h>
 
 @implementation InputWidget
