@@ -1,3 +1,9 @@
+1998-01-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* TkExtra.h, BLTGraph.m, Button.m, ButtonPanel.m, CheckButton.m,
+	Entry.m, Form.m, Frame.m, Histo.m, InputWidget.m, Label.m,
+	Raster.m, Widget.m, XColormap.m: Tk.h changed to TkInterp.h.
+
 1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* tkobjc.m (ensureBltSupportFiles): New function.  Looks for
